# one-stop-service-note

./: .gitignore  CLAUDE.md  LICENSE  README.md  manifest.json
docs/: IMPLEMENTATION_SPEC.md
native/: Cargo.toml  README.md  install.ps1
native/.cargo/: config.toml
native/src/: main.rs
src/: background.js  gamepad.js
src/content/: progress.js
src/lib/: bili.js  storage.js
src/popup/: popup.css  popup.html  popup.js
