[package]
name = "osn-gamepad"
version = "0.1.0"
edition = "2021"
description = "一条龙清单 · 手柄遥控 native messaging host"

[[bin]]
name = "osn-gamepad"
path = "src/main.rs"

[dependencies]
gilrs = "0.11"
serde_json = "1"
windows = { version = "0.62", features = ["Win32_UI_Input_XboxController", "Win32_UI_Input_KeyboardAndMouse"] }

# 极小 exe：体积优先 + 去符号 + abort（无 unwind 表）
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
